@startuml DominioBoard
hide empty members
skinparam classAttributeIconSize 0
left to right direction

class Board

class BoardTile {
  +cooldown: UInt?
}

class BoardPosition {
  +x: Int
  +y: Int
}

class Tile

enum Direction {
  EAST
  NORTH
  SOUTH
  WEST
}

class TileEffect {
  +maxCooldown: UInt
  +info: String
  +range: UInt
}

enum TileEffectTypes {
  None
  Start
  Chest
  BigChest
  StatUp
  StatDown
  StatUpAoE
  StatDownAoE
}

class BoardTiles <<typealias>> {
  List<BoardTile>
}

Board *-- BoardTiles : tiles
BoardTiles *-- "0..*" BoardTile

BoardTile *-- BoardPosition : pos
BoardTile *-- Tile : tile
BoardTile o-- "0..1" Character : character

Tile *-- "2..4" Direction : connections
Tile *-- TileEffect : specialEffect

TileEffect *-- TileEffectTypes : type

@enduml
